--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+   <link rel="shortcut icon" href="image/logo-me.png" type="image/png">
    <title>BMW😎</title>
    <link rel="stylesheet" href="css/main.css">
 </head>
@@ -524,7 +525,7 @@
    </section>
 
    <section class="contact" id="contact">
-      <h1 class="heading"><span>contact</span>vus</h1>
+      <h1 class="heading"><span>contact</span> us</h1>
 
       <div class="row">
          <iframe class="map"
