change title name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <div id="menu-btn" class="fas fa-bars"></div>
 
-      <a href="#" class="logo"> <span>Max</span>wheels</a>
+      <a href="#" class="logo"> <span>BMW</span>Cars</a>
 
       <nav class="navbar">
          <a href="#home">home</a>
